--- a/src/style.css
+++ b/src/style.css
@@ -1,50 +1,51 @@
+@import url('https://fonts.googleapis.com/css?family=Chakra+Petch');
 body{
-background-image: url("https://dobmusic.com/wp-content/uploads/edd/2018/11/galaxy-11098_1280.jpg");
+background-image: url("https://www.wallpaperup.com/uploads/wallpapers/2014/05/11/351744/b28174bf49f03394f95316250572cccb.jpg");
 
 }
-.title
+.titulo
 {
-  font-family: monospace,serif;
+  font-family: Chakra Petch,serif;
   font-size: 20px;
-  padding: 50px;
-  background-color: black;
+  padding: 10px;
+  background-color:black;
   opacity: inherit;
   color: white;
 }
 .message-content {
-    background-color: #85C1E9;
+    background-color: #F5BB3E;
     width: 500px;
     border: 0px ;
     padding: 25px;
-    margin-left:500px;
+    margin-left:800px;
     margin-top: 0px;
-    font-family: monospace ,serif;
-    color: white;
+    font-family: Chakra Petch,serif;
+    color:black;
 
 }
 .clave-content
 {
-  background-color: #0E9371;
+  background-color:#707B7C;
   width: 500px;
   border: 0px ;
   padding: 25px;
-  margin-left:500px;
-  margin-top: 100px;
-  font-family: monospace,serif;
+  margin-left:800px;
+  margin-top: 0px;
+font-family: Chakra Petch,bold;
 
 }
 .buttons-content{
-  background-color: #A9CCE3;
+  background-color:#566573;
   width: 500px;
   padding: 25px;
-  margin-left:500px;
+  margin-left:800px;
   margin-top: 0px;
-  font-family: monospace,serif;
+  font-family: Chakra Petch,serif;
 
 
 }
 #btn-cipher{
-background-color: #4CAF50; /* Green */
+background-color: #2471A3;
 border: none;
 color: white;
 padding: 20px;
@@ -59,10 +60,11 @@ border-radius: 5px;
 }
 #btn-decipher
 {
-  background-color: #4CAF50; /* Green */
+  background-color: #2471A3;
   border: none;
   color: white;
   padding: 20px;
+  font-family: Chakra Petch,serif;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -81,10 +83,12 @@ background-color: black;
 {
 width: 200px;
 padding: 50px;
+font-family: Chakra Petch,serif;
 
 }
 #moveTo
 {
 width: 20px;
 padding: 10px;
+font-family: Chakra Petch,serif;
 }
