--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Chakra+Petch');
 body{
-  background-color:white;
-}
+background-color:white;
+background-image: url(https://static.tumblr.com/3869f2da0f3d67ee38c28a1380ac3009/dn8hj2o/aw0ogrmel/tumblr_static_437i1aqm00qo4kk8kgwoo8w4k_640_v2.jpg);
+background-repeat: no-repeat;
+margin-top: 100px;
+
+  }
+  .image
+  {
+    background-image: url(https://i.pinimg.com/originals/f7/1f/9e/f71f9ed67db46f832d52742dd51bc6c5.gif);
+    padding: 400px;
+    background-repeat: no-repeat;
+    margin-left: 1100px;
+  }
+.instruction-content
+  {
+    font-family: Chakra Petch,serif;
+    margin-left: 800px;
+    margin-top: 40px;
+  }
 .titulo
 {
   font-family: Chakra Petch,serif;
   font-size: 20px;
-  padding: 10px;
-  background-color:black;
+  padding: 5px;
+  background-color:gray;
   opacity: inherit;
   color: white;
+  align-content: center;
+  text-align: center;
 }
 .message-content {
     background-color: #F5BB3E;
