--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Chakra+Petch');
 body{
-background-color:#F9F8D6;
+background-color:black;
 background-image: url(https://static.tumblr.com/3869f2da0f3d67ee38c28a1380ac3009/dn8hj2o/aw0ogrmel/tumblr_static_437i1aqm00qo4kk8kgwoo8w4k_640_v2.jpg);
 background-repeat: no-repeat;
-margin-top: 80px;
+margin-top: 0px;
 
   }
   .image
@@ -16,23 +16,27 @@ margin-top: 80px;
   {
     font-family: Chakra Petch,serif;
     margin-left: 800px;
-    margin-top: 40px;
+    margin-top: 80px;
   }
   #start
   {
 
-    background-color: #A3E4D7;
+    background-color:#F08D40;
     padding: 20px;
-    margin-left: 200px;
+    width: 60%;
+    height: 10%;
+    margin-left:90px;
     border:none;
+    margin-top: 10%;
     font-family: Chakra Petch,serif;
     font-size: 20px;
   }
 .titulo
 {
+  margin-top: 0;
   font-family: Chakra Petch,serif;
   font-size: 20px;
-  padding: 5px;
+  padding: 2%;
   background-color:gray;
   opacity: inherit;
   color: white;
@@ -40,7 +44,7 @@ margin-top: 80px;
   text-align: center;
 }
 .message-content {
-    color: #F5BB3E;
+    background-color:#3D3F50;
     width: 500px;
     border: 0px ;
     padding: 25px;
@@ -50,13 +54,13 @@ margin-top: 80px;
 }
 .clave-content
 {
-  background-color:#020836;
-  font-color=white;
+  background-color:#F08D40;
+  font-color:white;
   width: 500px;
   border: 0px ;
-  padding: 25px;
+  padding: 2%;
   margin-left:700px;
-  margin-top: 0px;
+  margin-top: 5%;
 font-family: Chakra Petch,bold;
 
 }
@@ -66,7 +70,7 @@ display: none;
 
 }
 .buttons-content{
-  background-color:#566573;
+  background-color:white;
   width: 500px;
   padding: 25px;
   margin-left:700px;
@@ -111,19 +115,41 @@ background-color: black;
 }
 #message
 {
-width: 200px;
-padding: 50px;
+width: 60%;
+padding: 5%;
+height: 90%
 font-family: Chakra Petch,serif;
 
 }
 #moveTo
 {
-width: 20px;
+width: 4%;
 padding: 10px;
 font-family: Chakra Petch,serif;
 }
 label
 {
-
   display: block;
+}
+@media screen and(min-width:780px) and(max-width:1024px)
+{
+  .titulo
+  {
+    width: 50%;
+  }
+  .message-content{
+    width: 50%;
+  }
+
+}
+@media screen and (min-width:480px)and(max-width:780px)
+{
+
+
+}
+
+@media screen and(max-width:480px)
+{
+
+
 }
