--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Chakra+Petch');
 body{
-background-color:black;
+background-color:white;
 background-image: url(https://static.tumblr.com/3869f2da0f3d67ee38c28a1380ac3009/dn8hj2o/aw0ogrmel/tumblr_static_437i1aqm00qo4kk8kgwoo8w4k_640_v2.jpg);
 background-repeat: no-repeat;
 margin-top: 0px;
-
+float: left;
   }
   .image
   {
     padding: 400px;
     background-repeat: no-repeat;
     margin-left: 1100px;
+    float: left;
   }
 .instruction-content
   {
     font-family: Chakra Petch,serif;
     margin-left: 800px;
     margin-top: 80px;
+    float: left;
   }
   #start
   {
