--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ margin-top: 100px;
     font-family: Chakra Petch,serif;
     margin-left: 800px;
     margin-top: 40px;
+    float: left;
   }
 .titulo
 {
