--- a/src/style.css
+++ b/src/style.css
@@ -1,104 +1,90 @@
 @import url('https://fonts.googleapis.com/css?family=Chakra+Petch');
-body{
+/*body{
 background-color:white;
 background-image: url(https://static.tumblr.com/3869f2da0f3d67ee38c28a1380ac3009/dn8hj2o/aw0ogrmel/tumblr_static_437i1aqm00qo4kk8kgwoo8w4k_640_v2.jpg);
 background-repeat: no-repeat;
 margin-top: 0px;
-float: left;
 margin: 0;
+  }*/
+  body
+  {
+    margin:0;
   }
 
-.encabezado ,.contenido,.contenido2,.pie-pagina
-{
-  padding: 0em 5em;
-}
-.contenido,.contenido2,.pie-pagina
-{
-  float: left;
-  box-sizing:border-box;
-}
-.encabezado
-{
-  height: 100%;
-}
-.image
+  .encabezado,.contenido,.contenido-lateral,.pie-pagina
   {
-    padding: 400px;
-    background-repeat: no-repeat;
-    margin-left: 1100px;
+    padding: 1em 2em;
+  }
+  .contenido,.contenido-lateral,.pie-pagina
+  {
     float: left;
-    height: 50%;
-    width: 50%;
+    box-sizing: border-box;
+  }
+.contenido2
+{
+  display: none;
+}
+
+  .encabezado
+  {
+    background-color:grey;
+    height: 100px;
+    font-family: Chakra Petch,serif;
+    text-align: center;
+    color: white;
+  }
+
+  .contenido/*instrucciones*/
+  {
+    margin-top: 1em;
+    width: 60%;
+    font-family: Chakra Petch,serif;
+    background-color: white;
+    align-content: center;
   }
 .instruction-content
   {
     font-family: Chakra Petch,serif;
-    margin-left: 600px;
-    margin-top: 80px;
-
   }
-  #start
+  .contenido-lateral/*IMAGEN*/
   {
-    background-color:#F08D40;
-    padding: 20px;
-    width: 60%;
-    height: 10%;
-    margin-left:90px;
-    border:none;
-    margin-top: 10%;
-    font-family: Chakra Petch,serif;
-    font-size: 20px;
+    width: 40%;
+    background-color: rgb(163,163,113);
+    height: 500px;
+    background-image: url(https://static.tumblr.com/3869f2da0f3d67ee38c28a1380ac3009/dn8hj2o/aw0ogrmel/tumblr_static_437i1aqm00qo4kk8kgwoo8w4k_640_v2.jpg);
+    background-repeat: no-repeat;
   }
-.titulo
+
+  .pie-pagina
+  {
+    width: 100%;
+    height: 50px;
+    background-color: #000;
+  }
+  .form1
+  {
+    display: block;
+  }
+/*por iD*/
+#start
 {
-  margin-top: 0;
-  font-family: Chakra Petch,serif;
-  font-size: 30px;
-  padding: 0.5%;
-  background-color:gray;
-  opacity: inherit;
-  color: white;
-  align-content: center;
-  text-align: center;
-  width: 98.4%;
-}
-.message-content {
-    background-color:#F0B27A;
-    width: 500px;
-    border: 0px ;
-    padding: 25px;
-    margin-left:700px;
-    margin-top: 0px;
-    font-family: Chakra Petch,serif;
-}
-.clave-content
-{
-  background-color:#F9E79F;
-  font-color:white;
-  width: 500px;
-  border: 0px ;
-  padding: 2%;
-  margin-left:700px;
-  margin-top: 5%;
-font-family: Chakra Petch,bold;
+  background-color:#F08D40;
+  padding: 20px;
+  width: 20%;
+  height: 10%;
+  align-self: center;
+  border:none;
+  font-family: Chakra Petch,bold;
+  font-size: 20px;
+  margin-left: 4em;
+  border-radius: 1em;
+  font-weight: bold;
+  cursor: pointer;
 
 }
-#form1
-{
-display: none;
-
-}
-.buttons-content{
-  background-color:#F0B27A;
-  width: 500px;
-  padding: 25px;
-  margin-left:700px;
-  margin-top: 0px;
-  font-family: Chakra Petch,serif;
-  border-color: black;
-}
-#btn-cipher{
-background-color: rgb(227, 120, 30);
+#btn-cipher,#btn-decipher{
+margin-top: 1em;
+background-color: rgb(227, 120,30);
 border: none;
 color: black;
 padding: 20px;
@@ -111,46 +97,33 @@ margin-left: : 10px;
 cursor: pointer;
 border-radius: 5px;
 }
-#btn-decipher
+
+#message,#text-result
 {
-  background-color: rgb(227, 120, 30);
-  border: none;
-  color: black;
-  padding: 20px;
-  font-family: Chakra Petch,serif;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 0px;
-  width: 225px;
-  cursor: pointer;
-  align-self: center;
-  border-radius: 5px;
-}
-.footer
-{
-background-color: black;
-}
-#message
-{
+margin-top: 0.5em;
 width: 60%;
 padding: 5%;
 height: 90%
 font-family: Chakra Petch,serif;
-
 }
+
 #moveTo
 {
 width: 4%;
 padding: 10px;
 font-family: Chakra Petch,serif;
 }
+
+
+/*etiquetas*/
 label
 {
   display: block;
+  margin: 1em;
 }
-@media screen and(max-width:780px)
+
+
+@media screen and (max-width: 780px)and (max-width: 1024px){
 {
   .titulo
   {
@@ -158,7 +131,7 @@ label
   }
   .message-content{
     width: 40%;
-
+    background-color:green;
   }
   .instruction-content
   {
@@ -171,7 +144,10 @@ label
 }
 @media screen and (min-width:480px)and(max-width:780px)
 {
-
+.titulo{
+  font-size: 10px;
+  color:green;
+}
 
 }
 
