--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Chakra+Petch');
+@import url('https://fonts.googleapis.com/css?family=Bungee|Chakra+Petch|Charmonman|Neucha|Sriracha|Unlock');
 /*body{
 background-color:white;
 background-image: url(https://static.tumblr.com/3869f2da0f3d67ee38c28a1380ac3009/dn8hj2o/aw0ogrmel/tumblr_static_437i1aqm00qo4kk8kgwoo8w4k_640_v2.jpg);
@@ -27,10 +27,9 @@ margin: 0;
 }
   .encabezado
   {
-    background-color:grey;
+    background-color:rgb(31, 31, 0.5);
     height: 100px;
-
-    font-family: Chakra Petch,serif;
+    font-family: Bungee,serif;
     text-align: center;
     color: white;
   }
@@ -67,6 +66,10 @@ margin: 0;
   .form1
   {
     display: block;
+}
+  .image-message
+  {
+font-family:Sriracha,serif;
   }
 /*por iD*/
 #start
@@ -87,20 +90,38 @@ margin: 0;
 }
 #btn-cipher,#btn-decipher{
 margin-top: 1em;
+font-family:Neucha,serif;
 background-color: rgb(227, 120,30);
 border: none;
-color: black;
-padding: 20px;
-width: 225px;
+color: white;
+padding: 10px;
+width: 150px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
-font-size: 16px;
+font-size: 14px;
 margin-left: : 10px;
 cursor: pointer;
-border-radius: 5px;
-}
+border-radius: 5px
 
+}
+#btn-clean
+{
+  margin-top: 1em;
+  background-color:rgb(31, 31, 80);
+  border: none;
+  color: white;
+  padding: 10px;
+  width: 10%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: : 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-family:Neucha,serif;
+}
 #message,#text-result
 {
 margin-top: 0.5em;
@@ -112,7 +133,7 @@ font-family: Chakra Petch,serif;
 
 #moveTo
 {
-width: 4%;
+width: 10%;
 padding: 10px;
 font-family: Chakra Petch,serif;
 }
@@ -140,10 +161,11 @@ label
   {
     margin-left: 0;
   }
-  body
-  {
-    background-image: url(http://www.canalgif.net/Gifs-animados/Vehiculos-marinos/Botellas/Imagen-animada-Botella-05.gif);
-  }
+@media screen and(min-width:360px)and(max-width:640px) {
+#btn-clean{
+  width: 100%;
+  background-color: white;
+}
 }
 @media screen and (min-width:480px)and(max-width:780px)
 {
